--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/error-message": "^2.0.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/vite": "^4.0.0",
+    "cart": "^1.1.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
