--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "immer": "^10.1.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-multi-carousel": "^2.8.5",
