--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^4.0.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/vite": "^4.0.0",
     "cart": "^1.1.2",
     "immer": "^10.1.1",
@@ -32,7 +34,8 @@
     "react-select": "^5.10.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "stripe": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
