--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
-    "stripe": "^17.6.0"
+    "stripe": "^17.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
