--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "assignment-frontend",
+  "homepage": "https://github.com/drjhatka/assignment-mern-frontend.git",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages-d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -22,6 +25,7 @@
     "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/vite": "^4.0.0",
     "cart": "^1.1.2",
+    "gh-pages": "^6.3.0",
     "immer": "^10.1.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
