--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assignment-frontend",
-  "homepage": "https://github.com/drjhatka/assignment-mern-frontend.git",
+  "homepage": "https://drjhatka.github.io/assignment-mern-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
